--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
     justify-content: space-between;
     flex-wrap: wrap;
 }
+
 .square {
     height: 70px;
     width: 70px;
@@ -22,8 +23,12 @@ body {
    margin: 0% 0% 30% 0%;
   }
 .middle {
+    border: 1px solid red; 
     display: flex;
 }
+.equal {
+    margin: 3%;
+ }
  .eq {
     height: 10px;
     width: 100px;
@@ -47,6 +52,18 @@ body {
     margin:20px 10px 20px 10px;
     border-style: solid;
     border-color: black;
+    font-size: 20px;
+    text-align: center;
+    font-family: Arial;
+    font-weight: 600;
     background-color: blue;
+
+    @media screen and (min-width: 583px) {
+        background-color: red;
+    }
+
+    @media screen and (min-width: 900px) {
+        background-color: #FFFFFF;
+    }
     
  }
